public/css/landing-a2df9d.webflow.css
/* ... */
.screenshot.scr-header {
  position: relative;
  z-index: 2;
  width: 85%;
}

.paragraph-2 {
  font-family: Nunito, sans-serif;
  color: #8aa9ef;
  font-size: 20px;
}

.caption-2 {
  max-width: 320px;
  margin-top: 20px;
  color: #777;
  font-size: 13px;
  line-height: 21px;
  text-align: center;
}

.footer-logo {
  margin-top: 40px;
  margin-bottom: 40px;
}

.footer-link-wrap {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
}

.footer-link {
  margin-left: 50px;
  color: #fff;
  text-decoration: none;
}

.hero-right {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 50%;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
}

.caption-1 {
  max-width: 320px;
  margin-top: 20px;
  color: rgba(0, 0, 0, .5);
  font-size: 13px;
  line-height: 21px;
  text-align: center;
}

.customers-logo {
  margin: 10px;
}

.caption-4 {
  max-width: 320px;
  margin-top: 20px;
  color: #777;
  font-size: 13px;
  line-height: 21px;
  text-align: center;
}

.caption-3 {
  max-width: 320px;
  margin-top: 20px;
  color: #777;
  font-size: 13px;
  line-height: 21px;
}

.text-span {
  color: #01ce71;
}

.btn {
  text-decoration:none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 60px;
  min-width: 185px;
  margin-right: 10px;
  margin-left: 10px;
  padding-top: 15px;
  padding-bottom: 15px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 300px;
  background-color: #8aa9ef;
  font-family: Nunito, sans-serif;
}

.btn.nanovault {
  background-color: #fff;
  text-decoration: none;
}

.btn.canoe {
  background-color: #524988;
}

.btn.nanowalletio {
  background-color: #000034;
}

.btn.nwc {
  background-color: #524988;
  background-image: -webkit-linear-gradient(315deg, #0b0c3e, #5395e3);
  background-image: linear-gradient(135deg, #0b0c3e, #5395e3);
}

.wrap-store {
  width: 100%;
  margin-top: 25px;
  -webkit-box-ordinal-group: 3;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.separator {
  position: relative;
  z-index: 1;
  width: 100%;
  height: 100px;
  margin-top: -78px;
  background-color: #d7e6f7;
  -webkit-transform: skew(0deg, -1deg);
  -ms-transform: skew(0deg, -1deg);
  transform: skew(0deg, -1deg);
}

.btn-logo {
  max-height: 30px;
  max-width: 125px;
}

.btn-text {
  position: relative;
  top: 2px;
  display: inline-block;
  margin-bottom: 0px;
  padding-top: 0px;
  padding-left: 10px;
  border-bottom: 1px none #000;
  font-family: Nunito, sans-serif;
  color: #000;
  font-weight: 700;
  text-decoration: none;
}

.btn-text.text-nanowallet {
  padding-left: 0px;
  color: #fff;
}

@media (max-width: 991px) {
  .logos-wrap {
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
  .column-wrap-1 {
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
  .subhead-3 {
    padding-right: 0px;
    padding-left: 0px;
  }
  .column-wrap-2 {
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
  .column-2 {
    width: 50%;
    margin-top: 20px;
    margin-bottom: 20px;
    -webkit-box-flex: 0;
    -webkit-flex: 0 auto;
    -ms-flex: 0 auto;
    flex: 0 auto;
  }
  .btn {
    margin-top: 10px;
    margin-bottom: 10px;
  }
}

@media (max-width: 767px) {
  .logo {
    margin-right: auto;
    margin-left: auto;
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
  .hero-section {
    height: auto;
  }
  .hero-wrap {
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-flex: 1;
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }
  .wrap-1 {
    text-align: center;
  }
  .heading-1 {
    padding-top: 50px;
  }
  .hero-left {
    width: 100%;
    padding-top: 20px;
    padding-bottom: 20px;
    text-align: center;
  }
  .wrap-2 {
    margin-top: 30px;
    padding-top: 20px;
    padding-bottom: 20px;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
  .wrap-2.a {
    -webkit-box-orient: vertical;
    -webkit-box-direction: reverse;
    -webkit-flex-direction: column-reverse;
    -ms-flex-direction: column-reverse;
    flex-direction: column-reverse;
  }
  .left-1 {
    width: 100%;
    padding: 20px 0px;
    -webkit-box-ordinal-group: 2;
    -webkit-order: 1;
    -ms-flex-order: 1;
    order: 1;
    text-align: center;
  }
  .right-1 {
    width: 100%;
  }
  .left-2 {
    width: 100%;
    padding-top: 20px;
    padding-bottom: 20px;
  }
  .right-2 {
    width: 100%;
    padding-right: 0px;
    padding-left: 0px;
    text-align: center;
  }
  .heading-3 {
    text-align: center;
  }
  .subhead-3 {
    text-align: center;
  }
  .hero-right {
    width: 100%;
    padding-top: 20px;
    padding-bottom: 20px;
  }
}
/* ... */

